# rules_kubebuilder

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
controller-gen/: BUILD.bazel  controller-gen.bzl  deps.bzl  extensions.bzl  repo.bzl
kubebuilder/: BUILD.sdk.bazel  assets.bzl  def.bzl  extensions.bzl  generate_sdk_list.py  kubebuilder-runner.sh.template  sdk.bzl  sdk_list.bzl
kustomize/: BUILD.bazel  deps.bzl  extensions.bzl  kustomize.bzl  repo.bzl
test/: BUILD.bazel  apackage_test.go  dummy_etcd_main.go  dummy_kube_apiserver_main.go  dummy_kubectl_main.go
