load("@rules_kubebuilder//kubebuilder:def.bzl", "kubebuilder")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "release",
    srcs = glob([
        "*.bazel",
    ]) + [
        "WORKSPACE",
    ],
    extension = "tar.gz",
    package_dir = "rules_kubebuilder",
)

# This is just an example of how to run kubebuilder via bazel
kubebuilder(name = "kubebuilder")
