load("@rules_kubebuilder//controller-gen:controller-gen-toolchain.bzl", "controller_gen_toolchain")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.bzl",
        "**/*.bzl",
    ]),
    visibility = ["//visibility:public"],
)

toolchain_type(name = "toolchain")

# Toolchains reference externally fetched binaries. See deps.bzl and
# extensions.bzl for repository creation macros.

# Linux x86_64
controller_gen_toolchain(
    name = "controller_gen_linux_amd64",
    controller_gen_bin = "@controller_gen_linux_amd64//:controller-gen",
)

toolchain(
    name = "controller_gen_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":controller_gen_linux_amd64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# Linux arm64
controller_gen_toolchain(
    name = "controller_gen_linux_arm64",
    controller_gen_bin = "@controller_gen_linux_arm64//:controller-gen",
)

toolchain(
    name = "controller_gen_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":controller_gen_linux_arm64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# macOS x86_64
controller_gen_toolchain(
    name = "controller_gen_darwin_amd64",
    controller_gen_bin = "@controller_gen_darwin_amd64//:controller-gen",
)

toolchain(
    name = "controller_gen_darwin_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":controller_gen_darwin_amd64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# macOS arm64
controller_gen_toolchain(
    name = "controller_gen_darwin_arm64",
    controller_gen_bin = "@controller_gen_darwin_arm64//:controller-gen",
)

toolchain(
    name = "controller_gen_darwin_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":controller_gen_darwin_arm64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)
