load("@rules_kubebuilder//kubebuilder:sdk.bzl", "kubebuilder_pwd")

exports_files([
    # As of newer Kubebuilder releases, only the kubebuilder binary is
    # included in the upstream tarball. etcd, kube-apiserver, and kubectl
    # are no longer bundled and must be provided separately by users.
    "bin/kubebuilder",
])

kubebuilder_pwd(
    name = "pwd",
    srcs = [
        "bin/kubebuilder",
    ],
    kubebuilder_binary = "bin/kubebuilder",
)
