load("@rules_kubebuilder//kustomize:kustomize-toolchain.bzl", "kustomize_toolchain")
load("@rules_kubebuilder//kustomize:kustomize.bzl", "kustomize_bin")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.bzl",
        "**/*.bzl",
    ]),
    visibility = ["//visibility:public"],
)

toolchain_type(name = "toolchain")

# Toolchains reference externally fetched binaries. See deps.bzl and
# extensions.bzl for repository creation macros.

# Linux x86_64
kustomize_toolchain(
    name = "kustomize_linux_amd64",
    kustomize_bin = "@kustomize_linux_amd64//:kustomize",
)

toolchain(
    name = "kustomize_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":kustomize_linux_amd64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# Linux arm64
kustomize_toolchain(
    name = "kustomize_linux_arm64",
    kustomize_bin = "@kustomize_linux_arm64//:kustomize",
)

toolchain(
    name = "kustomize_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":kustomize_linux_arm64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# macOS x86_64
kustomize_toolchain(
    name = "kustomize_darwin_amd64",
    kustomize_bin = "@kustomize_darwin_amd64//:kustomize",
)

toolchain(
    name = "kustomize_darwin_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":kustomize_darwin_amd64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# macOS arm64
kustomize_toolchain(
    name = "kustomize_darwin_arm64",
    kustomize_bin = "@kustomize_darwin_arm64//:kustomize",
)

toolchain(
    name = "kustomize_darwin_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":kustomize_darwin_arm64",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

# Public wrapper to expose the active kustomize as a single label usable from genrule
kustomize_bin(
    name = "kustomize_bin",
    visibility = ["//visibility:public"],
)
